# crucible

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
fixtures/golden/: cross_validation.json  scoring.json
fixtures/golden/validate/: cross-validation-warn.json  cross-validation.json  epic-decomposition.json  epic-expansion.json  planning-spec.json  ticket-decomposition.json  ticket-expansion-no-types.json  ticket-expansion.json
fixtures/test-surface/cases/: seed-cross-validation.json  seed-epic-decomposition.json  seed-epic-expansion.json  seed-planning-spec.json  seed-ticket-decomposition.json  seed-ticket-expansion.json
fixtures/test-surface/configs/: default.yml  no-types-enforced.yml
src/crucible/: __init__.py  _spec.py
src/crucible/api/: __init__.py  dispatcher.py  input_validation.py  phase_classification.py  scope_resolver.py  validate.py  version.py
src/crucible/checks/: __init__.py  coverage.py  na_validation.py
src/crucible/config/: __init__.py  defaults.py  load.py  merge.py  overrides.py  resolver.py  schema.py  snapshot.py
src/crucible/cross_validation/: __init__.py  blueprint.py  dependency_graph.py  emission.py  files.py  topology.py  waves.py
src/crucible/engines/: __init__.py  ratios.py  wave_calculator.py
src/crucible/guidance/: fixed_prompts.py
src/crucible/models/: __init__.py  _base.py  auxiliary.py  blueprint.py  enums.py  epic.py  planning.py  specification.py  ticket.py
src/crucible/scoring/: __init__.py  cascade.py  field_declarations.py  global_.py  per_entity.py  per_field.py  tiers.py  topology.py
src/crucible/structural/: __init__.py  _strict_schema.py  duplicate_order.py  entity_count_check.py  format.py  presence.py  version_resolver.py
src/crucible/types/: __init__.py  _base.py  cascade.py  config.py  context.py  enums.py  finding.py  guidance.py  operations.py  phase.py  (+3 more)
tests/: test_api.py  test_config.py  test_cross_validation.py  test_properties.py  test_scoring.py  test_smoke.py  test_structural.py  test_validate_differential.py
(+161 files in other folders)
