[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crucible-forge"
version = "0.1.0"
description = "Self-contained, deterministic validation engine for OpenSpec v1.1 specifications (Python port of the SpecForge validator)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Gabriel Augusto Gonçalves", email = "gab.augustog@gmail.com" }]
keywords = ["spec", "validation", "openspec", "specsmither", "rubric", "scoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typing-extensions>=4.12",
]

[project.urls]
Homepage = "https://github.com/blacksmithers/crucible"
Repository = "https://github.com/blacksmithers/crucible"
Issues = "https://github.com/blacksmithers/crucible/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/crucible"]

[tool.hatch.build.targets.sdist]
include = ["src/crucible", "README.md", "LICENSE", "docs"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# RUF001/2/3: ambiguous-unicode — guidance prose is ported verbatim and
# intentionally contains × – → ≥ etc.; preserving them is required for fidelity.
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["crucible"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
